--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,23 @@ body{
 .filter-input:focus{
     outline: none;
 }
+
+.poke-modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(148, 148, 148, 0.30);
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.poke-modal .card{
+    width: 24rem;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
+}
+
